made footer and navbar always visible, footer no longer blocks content

--- a/ExpenseTracker/budget/static/css/styles.css
+++ b/ExpenseTracker/budget/static/css/styles.css
@@ -16,3 +16,8 @@
     font-weight: bold;
     text-align: center;
 }
+
+body {
+    margin-top: 75px;
+    margin-bottom: 200px;
+}
